--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <h1>This is an Input Eye Trace animation for login</h1>
   </section>
 
-	<section class="svg container">
+	<section class="svg-container">
 		<svg #svgEye width="200" viewBox="0 0 911 654" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<g id="undraw_Surveillance_re_8tkl 1">
 				<path id="eyeball"
